fixing vertical scrollbar problem

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  overflow: hidden;
   padding: 80px 0;
 }
 
